--- a/.github/workflows/build-packages-release-22.03.yml
+++ b/.github/workflows/build-packages-release-22.03.yml
@@ -4,13 +4,13 @@ on:
     branches: main
     paths:
       - '.github/workflows/build-packages-release-22.03.yml'
-      - 'scripts/patch.sh'
-      - 'packages/**'
-      - '!packages/**/github/workflows/**'
-      - '!packages/**/README*'
+      - 'patch.sh'
+      - '**'
+      - '!**/github/workflows/**'
+      - '!**/README*'
       - '!**/.gitignore'
-      - '!packages/**/LICENSE'
-      - '!packages/**/LICENSES'
+      - '!**/LICENSE'
+      - '!**/LICENSES'
 
 jobs:
   buildpkg:
@@ -88,11 +88,11 @@ jobs:
           ARCH: ${{ matrix.arch }}
         run: |
           ARCH=$(echo $ARCH | sed 's/-v/-/g')
-          BRANCH="packages/${ARCH::-2}"
+          BRANCH="${ARCH::-2}"
           if [[ $ARCH =~ "snapshot" ]]; then
-              BRANCH="packages/$ARCH"
+              BRANCH="$ARCH"
           fi
-          cd bin/packages/*/action
+          cd bin/*/action
           sudo chown runner:runner -R .
           git init
           git config user.name "bot"
