--- a/config.json
+++ b/config.json
@@ -1,5 +1,14 @@
 [
     {
+        "URL": "https://github.com/sbwml/luci-app-mosdns.git",
+        "use_latest_tag": true,
+        "subdir": [
+            {
+                "dir": "v2dat"
+            }
+        ]
+    },
+    {
         "URL": "https://github.com/immortalwrt/packages.git",
         "subdir": [
             {
