--- a/.github/workflows/build-packages-release-22.03.yml
+++ b/.github/workflows/build-packages-release-22.03.yml
@@ -88,7 +88,7 @@ jobs:
           ARCH: ${{ matrix.arch }}
         run: |
           ARCH=$(echo $ARCH | sed 's/-v/-/g')
-          BRANCH="${ARCH::-2}"
+          BRANCH="packages/${ARCH::-2}"
           if [[ $ARCH =~ "snapshot" ]]; then
               BRANCH="$ARCH"
           fi
