--- a/.github/workflows/build-packages-release-22.03.yml
+++ b/.github/workflows/build-packages-release-22.03.yml
@@ -5,6 +5,7 @@ on:
     paths:
       - '.github/workflows/build-packages-release-22.03.yml'
       - 'patch.sh'
+      - 'do_not_build'
       - 'packages/**'
       - '!packages/**/github/workflows/**'
       - '!packages/**/README*'
