--- a/.github/workflows/build-packages-release-21.02.yml
+++ b/.github/workflows/build-packages-release-21.02.yml
@@ -87,10 +87,7 @@ jobs:
           ARCH: ${{ matrix.arch }}
         run: |
           ARCH=$(echo $ARCH | sed 's/-v/-/g')
-          BRANCH="packages/${ARCH::-2}"
-          if [[ $ARCH =~ "snapshot" ]]; then
-              BRANCH="packages/$ARCH"
-          fi
+          BRANCH="${ARCH::-2}"
           cd bin/packages/*/action
           sudo chown runner:runner -R .
           git init
