--- a/.github/workflows/build-packages-release-22.03.yml
+++ b/.github/workflows/build-packages-release-22.03.yml
@@ -89,10 +89,7 @@ jobs:
           ARCH: ${{ matrix.arch }}
         run: |
           ARCH=$(echo $ARCH | sed 's/-v/-/g')
-          BRANCH="packages/${ARCH::-2}"
-          if [[ $ARCH =~ "snapshot" ]]; then
-              BRANCH="$ARCH"
-          fi
+          BRANCH="${ARCH::-2}"
           cd bin/packages/*/action
           sudo chown runner:runner -R .
           git init
