--- a/.github/workflows/build-packages-release.yml
+++ b/.github/workflows/build-packages-release.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches: main
     paths:
-      - '.github/workflows/build-packages-release-22.03.yml'
+      - '.github/workflows/build-packages-release.yml'
       - 'patch.sh'
       - 'do_not_build'
       - 'packages/**'
