--- a/.github/workflows/build-packages-release.yml
+++ b/.github/workflows/build-packages-release.yml
@@ -82,6 +82,38 @@ jobs:
           - powerpc_464fp-v21.02.5
           - powerpc_8540-v21.02.5
           - x86_64-v21.02.5
+          - aarch64_cortex-a53-SNAPSHOT
+          - aarch64_cortex-a72-SNAPSHOT
+          - aarch64_generic-SNAPSHOT
+          - arc_archs-SNAPSHOT
+          - arm_arm1176jzf-s_vfp-SNAPSHOT
+          - arm_arm926ej-s-SNAPSHOT
+          - arm_cortex-a15_neon-vfpv4-SNAPSHOT
+          - arm_cortex-a5_vfpv4-SNAPSHOT
+          - arm_cortex-a7-SNAPSHOT
+          - arm_cortex-a7_neon-vfpv4-SNAPSHOT
+          - arm_cortex-a7_vfpv4-SNAPSHOT
+          - arm_cortex-a8_vfpv3-SNAPSHOT
+          - arm_cortex-a9-SNAPSHOT
+          - arm_cortex-a9_neon-SNAPSHOT
+          - arm_cortex-a9_vfpv3-d16-SNAPSHOT
+          - arm_fa526-SNAPSHOT
+          - arm_mpcore-SNAPSHOT
+          - arm_xscale-SNAPSHOT
+          - i386_pentium-mmx-SNAPSHOT
+          - i386_pentium4-SNAPSHOT
+          - mips64_octeonplus-SNAPSHOT
+          - mips_24kc-SNAPSHOT
+          - mips_4kec-SNAPSHOT
+          - mips_mips32-SNAPSHOT
+          - mipsel_24kc-SNAPSHOT
+          - mipsel_24kc_24kf-SNAPSHOT
+          - mipsel_74kc-SNAPSHOT
+          - mipsel_mips32-SNAPSHOT
+          - powerpc_464fp-SNAPSHOT
+          - powerpc_8540-SNAPSHOT
+          - powerpc_8548-SNAPSHOT
+          - x86_64-SNAPSHOT
 
     steps:
       - uses: actions/checkout@v3
@@ -123,6 +155,9 @@ jobs:
         run: |
           ARCH=$(echo $ARCH | sed 's/-v/-/g')
           BRANCH="${ARCH::-2}"
+          if [[ $ARCH =~ "SNAPSHOT" ]]; then
+              BRANCH="$ARCH"
+          fi
           cd bin/packages/*/action
           sudo chown runner:runner -R .
           git init
