Fixed wrong branch name

--- a/.github/workflows/build-packages-release.yml
+++ b/.github/workflows/build-packages-release.yml
@@ -181,10 +181,8 @@ jobs:
           ARCH: ${{ matrix.arch }}
         run: |
 
-          ARCH_NAME=$(echo "$ARCH" | awk -F'-' 'BEGIN {OFS=FS} {NF--; print}')
-          VERSION=$(echo "$ARCH" | awk -F'-' '{print $NF}')
-          # remove v
-          VERSION=$(echo $VERSION | awk -F'v' '{print $2}')
+          ARCH_NAME=$(echo "$ARCH" | awk -F'-v' '{print $1}')
+          VERSION=$(echo "$ARCH" | awk -F'-v' '{print $2}')
           # big version 23.05
           BIG_VERSION=$(echo $VERSION | awk -F'.' '{print $1"."$2}')
 
