--- a/config.json
+++ b/config.json
@@ -23,6 +23,9 @@
         "URL": "https://github.com/EkkoG/sdm.git"
     },
     {
+        "URL": "https://github.com/EkkoG/clash-meta-alpha-for-openclash.git"
+    },
+    {
         "URL": "https://github.com/EkkoG/clash-meta-for-openclash.git"
     },
     {
