Add manaul sync

--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -1,5 +1,9 @@
 name: Upstream Packages Version Check
 on:
+  workflow_dispatch:
+    inputs:
+      tag:
+        description: "The tag version you want to build"
   push:
     branches: main
     paths:
