--- a/.github/workflows/build-packages-release.yml
+++ b/.github/workflows/build-packages-release.yml
@@ -22,15 +22,8 @@ jobs:
         arch:
           - x86_64-v23.05.2
           - aarch64_cortex-a53-v23.05.2
-          - x86_64-v22.03.5
-          - x86_64-v21.02.7
-          - x86_64-SNAPSHOT
           - aarch64_generic-v23.05.2
-          - aarch64_generic-v22.03.5
-          - aarch64_generic-v21.02.7
-          - aarch64_generic-SNAPSHOT
           - mipsel_24kc-v23.05.2
-          - mipsel_24kc-v22.03.5
 
     steps:
       - uses: actions/checkout@v3
@@ -49,6 +42,7 @@ jobs:
           PACKAGES=$(echo "$PACKAGES" | tr '\n' ' ')
           echo "PACKAGES=${PACKAGES}" >> $GITHUB_ENV
           find . -name "Makefile" -type f -exec cat {} \;
+          final_arch=$(echo ${{ matrix.arch }} | cut -d '-' -f 1)
 
       - name: Build
         uses: ekkog/gh-action-sdk@master
@@ -72,6 +66,6 @@ jobs:
           flags: '-ahvHP'
           options: '--delete'
           src: 'bin/packages/*/action/'
-          dest: '${{ secrets.SF_USER }}@frs.sourceforge.net:/home/frs/project/ekko-openwrt-dist/packages/${{ matrix.arch }}/'
+          dest: '${{ secrets.SF_USER }}@frs.sourceforge.net:/home/frs/project/ekko-openwrt-dist/packages/${{ env.final_arch }}/'
         env:
           DEPLOY_KEY: ${{ secrets.SF_KEY }}
